Fully populated family tree. TODO: Fix positioning (z-index)?, Center marraiges, connect marraiges across tree.

--- a/timeline/src/App.css
+++ b/timeline/src/App.css
@@ -115,142 +115,160 @@ h3 {
 .vertical-timeline::before {
   background: grey;
 }
-* {margin: 0; padding: 0;}
+* {
+  margin: 0;
+  padding: 0;
+}
 
-		.tree ul {
-			padding-top: 20px; position: relative;
-	
-			-webkit-transition: all 0.5s;
-			-moz-transition: all 0.5s;
-			transition: all 0.5s;
-		}
+.tree ul {
+  padding-top: 20px;
+  position: relative;
 
-		.tree li {
-			float: left; text-align: center;
-			list-style-type: none;
-			position: relative;
-			padding: 20px 5px 0 5px;
-	
-			-webkit-transition: all 0.5s;
-			-moz-transition: all 0.5s;
-			transition: all 0.5s;
-		}
-    .tree-photo{
-      position:relative;
-      width:150px;
-      height: 150px;
-      border-radius:50%;
-    }
-    .tree-info{
-      
-    }
-		/*We will use ::before and ::after to draw the connectors*/
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+}
 
-		.tree li::before, .tree li::after{
-			content: '';
-			position: absolute; top: 0; right: 50%;
-			border-top: 1px solid #ccc;
-			width: 50%; height: 45px;
-			z-index: -1;
-		}
-		.tree li::after{
-			right: auto; left: 50%;
-			border-left: 1px solid #ccc;
-		}
+.tree li {
+  float: left;
+  text-align: center;
+  list-style-type: none;
+  position: relative;
+  padding: 20px 5px 0 5px;
 
-		/*We need to remove left-right connectors from elements without 
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.tree-photo {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+.tree-info {
+}
+/*We will use ::before and ::after to draw the connectors*/
+
+.tree li::before,
+.tree li::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 50%;
+  border-top: 1px solid #ccc;
+  width: 50%;
+  height: 45px;
+  z-index: -1;
+}
+.tree li::after {
+  right: auto;
+  left: 50%;
+  border-left: 1px solid #ccc;
+}
+
+/*We need to remove left-right connectors from elements without 
 		any siblings*/
-		.tree li:only-child::after, .tree li:only-child::before {
-			display: none;
-		}
+.tree li:only-child::after,
+.tree li:only-child::before {
+  display: none;
+}
 
-		/*Remove space from the top of single children*/
-		.tree li:only-child{ padding-top: 0;}
+/*Remove space from the top of single children*/
+.tree li:only-child {
+  padding-top: 0;
+}
 
-		/*Remove left connector from first child and 
+/*Remove left connector from first child and 
 		right connector from last child*/
-		.tree li:first-child::before, .tree li:last-child::after{
-			border: 0 none;
-		}
-		/*Adding back the vertical connector to the last nodes*/
-		.tree li:last-child::before{
-			border-right: 1px solid #ccc;
-			border-radius: 0 5px 0 0;
-			
-			-webkit-transform: translateX(1px);
-			-moz-transform: translateX(1px);
-			transform: translateX(1px);
-			
-			-webkit-border-radius: 0 5px 0 0;
-			-moz-border-radius: 0 5px 0 0;
-			border-radius: 0 5px 0 0;
-		}
-		.tree li:first-child::after{
-			border-radius: 5px 0 0 0;
-			-webkit-border-radius: 5px 0 0 0;
-			-moz-border-radius: 5px 0 0 0;
-		}
+.tree li:first-child::before,
+.tree li:last-child::after {
+  border: 0 none;
+}
+/*Adding back the vertical connector to the last nodes*/
+.tree li:last-child::before {
+  border-right: 1px solid #ccc;
+  border-radius: 0 5px 0 0;
 
-		/*Time to add downward connectors from parents*/
-		.tree ul ul::before{
-			content: '';
-			position: absolute; top: -12px; left: 50%;
-			border-left: 1px solid #ccc;
-			width: 0; height: 32px;
-			z-index: -1;
-		}
+  -webkit-transform: translateX(1px);
+  -moz-transform: translateX(1px);
+  transform: translateX(1px);
 
-		.tree li a{
-			border: 1px solid #ccc;
-			padding: 5px 10px;
-			text-decoration: none;
-			color: #666;
-			font-family: arial, verdana, tahoma;
-			font-size: 11px;
-			display: inline-block;
-			background: white;
-	
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-	
-			-webkit-transition: all 0.5s;
-			-moz-transition: all 0.5s;
-			transition: all 0.5s;
-		}
-		.tree li a+a {
-			margin-left: 20px;
-			position: relative;
-		}
-		.tree li a+a::before {
-			content: '';
-			position: absolute;
-			border-top: 1px solid #ccc;
-			top: 50%; left: -21px; 
-			width: 20px;
-		}
+  -webkit-border-radius: 0 5px 0 0;
+  -moz-border-radius: 0 5px 0 0;
+  border-radius: 0 5px 0 0;
+}
+.tree li:first-child::after {
+  border-radius: 5px 0 0 0;
+  -webkit-border-radius: 5px 0 0 0;
+  -moz-border-radius: 5px 0 0 0;
+}
 
-		/*Time for some hover effects*/
-		/*We will apply the hover effect the the lineage of the element also*/
-		.tree li a:hover, .tree li a:hover~ul li a {
-			background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
-		}
-		/*Connector styles on hover*/
-		.tree li a:hover~ul li::after, 
-		.tree li a:hover~ul li::before, 
-		.tree li a:hover~ul::before, 
-		.tree li a:hover~ul ul::before
-		{
-			border-color: #94a0b4;
-		}
+/*Time to add downward connectors from parents*/
+.tree ul ul::before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  border-left: 1px solid #ccc;
+  width: 0;
+  height: 32px;
+  z-index: -1;
+}
+
+.tree li a {
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #666;
+  font-family: arial, verdana, tahoma;
+  font-size: 11px;
+  display: inline-block;
+  background: white;
+
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.tree li a + a {
+  margin-left: 20px;
+  position: relative;
+}
+.tree li a + a::before {
+  content: "";
+  position: absolute;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #8B0000;
+  top: 50%;
+  left: -21px;
+  width: 20px;
+}
+
+/*Time for some hover effects*/
+/*We will apply the hover effect the the lineage of the element also*/
+.tree li a:hover,
+.tree li a:hover ~ ul li a {
+  background: #c8e4f8;
+  color: #000;
+  border: 1px solid #94a0b4;
+}
+/*Connector styles on hover*/
+.tree li a:hover ~ ul li::after,
+.tree li a:hover ~ ul li::before,
+.tree li a:hover ~ ul::before,
+.tree li a:hover ~ ul ul::before {
+  border-color: #94a0b4;
+}
 
 .tree-wrapper {
   display: inline-block;
   min-height: 900px;
-  width:3000px;
+  width: 5000px;
 }
-
-
 
 #scroll {
   background: grey;
